incluindo acao do botao - arquivo xib AdicionarItensViewController

--- a/eggplant-brownie/eggplant-brownie/Views/AdicionarItensViewController.xib
+++ b/eggplant-brownie/eggplant-brownie/Views/AdicionarItensViewController.xib
@@ -10,6 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AdicionarItensViewController" customModule="eggplant_brownie" customModuleProvider="target">
             <connections>
+                <outlet property="caloriasTextField" destination="8bg-94-b8T" id="FRr-46-JIU"/>
+                <outlet property="nomeTextField" destination="KOH-JN-UQ1" id="Fqj-a3-mjB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -49,6 +51,9 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Adicionar"/>
+                    <connections>
+                        <action selector="adicionarItem:" destination="-1" eventType="touchUpInside" id="0Qc-9e-ied"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
