--- a/AluraViagens/AluraViagens/HomeTableViewHeader.xib
+++ b/AluraViagens/AluraViagens/HomeTableViewHeader.xib
@@ -14,9 +14,8 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zfp-ez-zJO" customClass="HomeTableViewHeader" customModule="AluraViagens" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfp-ez-zJO" customClass="HomeTableViewHeader" customModule="AluraViagens" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="alura viagens" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vpo-3y-fAB" userLabel="Header View">
                             <rect key="frame" x="18" y="32" width="140" height="32"/>
@@ -25,28 +24,51 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tmh-Rc-NmR" userLabel="Banner View">
-                            <rect key="frame" x="20" y="142" width="375" height="130"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmh-Rc-NmR" userLabel="Banner View">
+                            <rect key="frame" x="20" y="132" width="375" height="130"/>
                             <subviews>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kSZ-By-Kjr">
-                                    <rect key="frame" x="0.0" y="0.0" width="200" height="128"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSZ-By-Kjr">
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="130"/>
                                     <color key="backgroundColor" red="0.31764705882352939" green="0.70196078431372544" blue="0.69411764705882351" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="200" id="7DU-O0-X6M"/>
+                                    </constraints>
                                 </view>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PiC-PV-Efg">
-                                    <rect key="frame" x="200" y="0.0" width="175" height="128"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PiC-PV-Efg">
+                                    <rect key="frame" x="200" y="0.0" width="175" height="130"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="175" id="UTT-ez-EGv"/>
+                                    </constraints>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="kSZ-By-Kjr" firstAttribute="top" secondItem="tmh-Rc-NmR" secondAttribute="top" id="CyJ-dS-jBb"/>
+                                <constraint firstItem="PiC-PV-Efg" firstAttribute="top" secondItem="tmh-Rc-NmR" secondAttribute="top" id="Tha-HN-Oca"/>
+                                <constraint firstAttribute="trailing" secondItem="PiC-PV-Efg" secondAttribute="trailing" id="Ubl-by-Wdk"/>
+                                <constraint firstAttribute="bottom" secondItem="PiC-PV-Efg" secondAttribute="bottom" id="YdB-2Q-waD"/>
+                                <constraint firstAttribute="height" constant="130" id="dlh-0Z-GD0"/>
+                                <constraint firstAttribute="bottom" secondItem="kSZ-By-Kjr" secondAttribute="bottom" id="wl1-IG-J7A"/>
+                                <constraint firstItem="kSZ-By-Kjr" firstAttribute="leading" secondItem="tmh-Rc-NmR" secondAttribute="leading" id="yau-ez-FXL"/>
+                            </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" red="0.11764705882352941" green="0.23137254901960785" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="tmh-Rc-NmR" secondAttribute="bottom" constant="-12" id="CaD-kb-3QT"/>
+                        <constraint firstAttribute="height" constant="250" id="fLy-kJ-d3m"/>
+                    </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="zfp-ez-zJO" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="D4n-RN-sBJ"/>
+                <constraint firstItem="zfp-ez-zJO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="YRP-Nj-29k"/>
+                <constraint firstItem="tmh-Rc-NmR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="msS-aX-NtQ"/>
+                <constraint firstItem="zfp-ez-zJO" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="qZS-wr-rhz"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="tmh-Rc-NmR" secondAttribute="trailing" constant="19" id="vUF-xp-EIc"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="BannerImageView" destination="PiC-PV-Efg" id="DaA-q4-5dM"/>
