Adicionando proporcionalidade com multiplier

--- a/AluraViagens/AluraViagens/HomeTableViewHeader.xib
+++ b/AluraViagens/AluraViagens/HomeTableViewHeader.xib
@@ -36,18 +36,17 @@
                                 </view>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PiC-PV-Efg">
                                     <rect key="frame" x="200" y="0.0" width="175" height="130"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="175" id="UTT-ez-EGv"/>
-                                    </constraints>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
+                                <constraint firstItem="kSZ-By-Kjr" firstAttribute="width" secondItem="tmh-Rc-NmR" secondAttribute="width" multiplier="0.533333" id="9lN-Jg-VfA"/>
                                 <constraint firstItem="kSZ-By-Kjr" firstAttribute="top" secondItem="tmh-Rc-NmR" secondAttribute="top" id="CyJ-dS-jBb"/>
                                 <constraint firstItem="PiC-PV-Efg" firstAttribute="top" secondItem="tmh-Rc-NmR" secondAttribute="top" id="Tha-HN-Oca"/>
                                 <constraint firstAttribute="trailing" secondItem="PiC-PV-Efg" secondAttribute="trailing" id="Ubl-by-Wdk"/>
                                 <constraint firstAttribute="bottom" secondItem="PiC-PV-Efg" secondAttribute="bottom" id="YdB-2Q-waD"/>
                                 <constraint firstAttribute="height" constant="130" id="dlh-0Z-GD0"/>
+                                <constraint firstItem="PiC-PV-Efg" firstAttribute="width" secondItem="tmh-Rc-NmR" secondAttribute="width" multiplier="0.466667" id="fDC-wD-8ii"/>
                                 <constraint firstAttribute="bottom" secondItem="kSZ-By-Kjr" secondAttribute="bottom" id="wl1-IG-J7A"/>
                                 <constraint firstItem="kSZ-By-Kjr" firstAttribute="leading" secondItem="tmh-Rc-NmR" secondAttribute="leading" id="yau-ez-FXL"/>
                             </constraints>
