--- a/AluraViagens/AluraViagens/View/Header/HomeTableViewHeader.xib
+++ b/AluraViagens/AluraViagens/View/Header/HomeTableViewHeader.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad10_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -18,10 +18,13 @@
                     <rect key="frame" x="-293" y="0.0" width="1000" height="250"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="alura viagens" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vpo-3y-fAB" userLabel="Titulo label">
-                            <rect key="frame" x="314" y="41" width="106.5" height="24"/>
+                            <rect key="frame" x="314" y="41" width="219" height="49"/>
                             <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="17"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
+                            <variation key="heightClass=regular-widthClass=regular">
+                                <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="35"/>
+                            </variation>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmh-Rc-NmR" userLabel="Banner View">
                             <rect key="frame" x="313" y="132" width="375" height="130"/>
@@ -30,16 +33,22 @@
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="130"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aproveite o verão, com:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NUB-lV-4GV">
-                                            <rect key="frame" x="16" y="14" width="168" height="62"/>
+                                            <rect key="frame" x="25" y="25" width="159" height="76"/>
                                             <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="22"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
+                                            <variation key="heightClass=regular-widthClass=regular">
+                                                <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="27"/>
+                                            </variation>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ofertas exclusivas somente no nosso app" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M2W-Ef-nA2">
-                                            <rect key="frame" x="16" y="82" width="168" height="34"/>
+                                            <rect key="frame" x="16" y="68" width="168" height="48"/>
                                             <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
+                                            <variation key="heightClass=regular-widthClass=regular">
+                                                <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="17"/>
+                                            </variation>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" red="0.31764705882352939" green="0.70196078431372544" blue="0.69411764705882351" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -47,9 +56,13 @@
                                         <constraint firstAttribute="trailing" secondItem="NUB-lV-4GV" secondAttribute="trailing" constant="16" id="5KF-j2-tPe"/>
                                         <constraint firstAttribute="bottom" secondItem="M2W-Ef-nA2" secondAttribute="bottom" constant="14" id="9UX-DK-vVH"/>
                                         <constraint firstItem="M2W-Ef-nA2" firstAttribute="leading" secondItem="kSZ-By-Kjr" secondAttribute="leading" constant="16" id="TKM-TF-q1c"/>
-                                        <constraint firstItem="NUB-lV-4GV" firstAttribute="leading" secondItem="kSZ-By-Kjr" secondAttribute="leading" constant="16" id="TbV-g2-9d7"/>
+                                        <constraint firstItem="NUB-lV-4GV" firstAttribute="leading" secondItem="kSZ-By-Kjr" secondAttribute="leading" constant="14" id="TbV-g2-9d7">
+                                            <variation key="heightClass=regular-widthClass=regular" constant="25"/>
+                                        </constraint>
                                         <constraint firstAttribute="trailing" secondItem="M2W-Ef-nA2" secondAttribute="trailing" constant="16" id="lcr-Qh-C1n"/>
-                                        <constraint firstItem="NUB-lV-4GV" firstAttribute="top" secondItem="kSZ-By-Kjr" secondAttribute="top" constant="14" id="reE-5P-TUd"/>
+                                        <constraint firstItem="NUB-lV-4GV" firstAttribute="top" secondItem="kSZ-By-Kjr" secondAttribute="top" constant="14" id="reE-5P-TUd">
+                                            <variation key="heightClass=regular-widthClass=regular" constant="25"/>
+                                        </constraint>
                                     </constraints>
                                 </view>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ferias" translatesAutoresizingMaskIntoConstraints="NO" id="PiC-PV-Efg">
